--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "gusgluna",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.6.0",
